Groups import parameter name changes